# RAIC-Overlay

./: .env.example  .gitignore  CLAUDE.md  README.md  check-build.ps1  index.html  next.config.mjs  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: release.yml
.github/workflows/: ci.yml  release.yml
.specify/memory/: constitution.md
app/: globals.css  layout.tsx  page.tsx
app/settings/: page.tsx
app/update/: page.tsx
specs/001-rust-overlay-init/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-shadcn-dark-theme/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-f3-fullscreen-overlay/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-external-window-attach/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-nextjs-motion-refactor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-main-menu-component/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-windows-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-tiptap-notes-component/: analysis.md  data-model.md  plan.md  quickstart.md  research.md  (+2 more)
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  settings.example.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: browser_webview.rs  browser_webview_types.rs  focus_monitor.rs  hotkey.rs  keyboard_hook.rs  lib.rs  logging.rs  main.rs  persistence.rs  persistence_types.rs  process_monitor.rs  settings.rs  settings_window.rs  state.rs  target_window.rs  tray.rs  types.rs  user_settings.rs  user_settings_types.rs  window.rs
src-tauri/src/browser/: commands.rs  mod.rs
src-tauri/src/commands/: mod.rs  overlay.rs
src-tauri/src/core/: mod.rs  state.rs  types.rs  window.rs
src-tauri/src/hotkey/: mod.rs  shortcuts.rs
src-tauri/src/logging/: cleanup.rs  mod.rs  types.rs
src-tauri/src/persistence/: commands.rs  mod.rs
src-tauri/src/platform/: focus_monitor.rs  keyboard_hook.rs  mod.rs  process_monitor.rs  target_window.rs  tray.rs
src-tauri/src/settings/: mod.rs  runtime.rs  types.rs  user.rs  window.rs
src-tauri/src/update/: checker.rs  downloader.rs  installer.rs  mod.rs  state.rs  types.rs  window.rs
src-tauri/windows/: installer.wxs
(+479 files in other folders)
