[package]
name = "raic-overlay"
version = "0.1.0"
description = "RAIC Overlay for Star Citizen"
authors = ["you"]
edition = "2021"

[lib]
name = "raic_overlay_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tauri-plugin-log = "2"
log = "0.4"
chrono = "0.4"
lazy_static = "1.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

# T001 (038): Auto-start plugin for Windows Registry integration
[target.'cfg(desktop)'.dependencies]
tauri-plugin-autostart = "2"

# T001, T002: Windows API dependency for target window attachment
# T001-T003 (028): Added Win32_System_Threading and Win32_System_ProcessStatus for process detection
# T001, T002 (029): Added Win32_UI_Input_KeyboardAndMouse and Win32_System_LibraryLoader for low-level keyboard hook
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_LibraryLoader"
] }
